changing sidebar position to fixed since sticky wasn't working properly on mobile

--- a/index.css
+++ b/index.css
@@ -114,7 +114,7 @@ body{
 }
 
 .sidebar{
-	position: sticky;
+	position: fixed;
 	float: left;
 	left: 0;
 	top: 50%;
